WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42180
[chromium] Autofill popup menu is broken when cycling through all the suggestions
https://bugs.webkit.org/show_bug.cgi?id=42180
Summary
[chromium] Autofill popup menu is broken when cycling through all the suggest...
Jay Civelli
Reported
2010-07-13 11:14:03 PDT
- Bring up a form autofill or autocomplete popup in Chromium - Arrow down so you pass all the suggestions and cycle back to the 1st one - Press ESC to close the popup Expected: The popup is closed. Actual: The popup linger and cannot be closed anymore. This was introduced by
https://bugs.webkit.org/attachment.cgi?id=58439
Attachments
Initial patch
(1.36 KB, patch)
2010-07-13 11:34 PDT
,
Jay Civelli
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jay Civelli
Comment 1
2010-07-13 11:34:18 PDT
Created
attachment 61400
[details]
Initial patch This is effectively a revert of
https://bugs.webkit.org/show_bug.cgi?id=42180
That CL fixed a Chromium crasher:
http://code.google.com/p/chromium/issues/detail?id=46287
that I cannot reproduce with this new code.
James Hawkins
Comment 2
2010-07-13 11:39:08 PDT
LGTM. We'll keep an eye on the crashers and see if the original crash pops up again.
WebKit Commit Bot
Comment 3
2010-07-14 16:02:43 PDT
Comment on
attachment 61400
[details]
Initial patch Clearing flags on attachment: 61400 Committed
r63367
: <
http://trac.webkit.org/changeset/63367
>
WebKit Commit Bot
Comment 4
2010-07-14 16:02:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug