2010-07-14  Jay Civelli  <jcivelli@chromium.org>

Reviewed by David Levin.

        Don't notify the WebView that the popup has been closed when the
        selection is cleared, as the popup is not gone and would linger
        as a ghost popup.
        https://bugs.webkit.org/show_bug.cgi?id=42180

        * src/AutoFillPopupMenuClient.cpp:
        (WebKit::AutoFillPopupMenuClient::selectionCleared):

Canonical link: https://commits.webkit.org/54216@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63367 268f45cc-cd09-0410-ab3c-d52691b4dbfc